Menu responsive casi terminado

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="bgHome">
-        <nav>
+        <span class="iconMenu" onclick="toogleNav()">X</span>
+        <nav id="navMenu">
             <ul>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Galeria</a></li>
@@ -26,6 +27,7 @@
         <div class="contacto">Contacto</div>
     </div>
 
+    <script src="./assets/index.js"></script>
     <!-- Librerias de terceros -->
 </body>
 </html>
