Imagen de fondo e icono menu para mobil

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="bgHome">
-        <span class="iconMenu" onclick="toogleNav()">X</span>
+        <span class="iconMenu" onclick="toogleNav()"><img src="./assets/icons/icons8-guitar.svg" alt=""></span>
         <nav id="navMenu">
             <ul>
                 <li><a href="#">Inicio</a></li>
