Menu desktop con animación raton por encima

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <span class="iconMenu" onclick="toogleNav()"><img src="./assets/icons/icons8-guitar.svg" alt=""></span>
         <nav id="navMenu">
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Galeria</a></li>
-                <li><a href="#">Videos</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a class="linkMenu" href="#">Inicio</a></li>
+                <li><a class="linkMenu" href="#">Galeria</a></li>
+                <li><a class="linkMenu" href="#">Videos</a></li>
+                <li><a class="linkMenu" href="#">Contacto</a></li>
             </ul>
         </nav>
     </div>
