Añadido enlace a noticias en el menú

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a class="linkMenu" href="#">Inicio</a></li>
                 <li><a class="linkMenu" href="#">Galeria</a></li>
                 <li><a class="linkMenu" href="#">Videos</a></li>
+                <li><a class="linkMenu" href="#">Noticias</a></li>
                 <li><a class="linkMenu" href="#">Contacto</a></li>
             </ul>
         </nav>
