Inicio/biografia terminado

--- a/index.html
+++ b/index.html
@@ -22,10 +22,42 @@
     </div>
 
     <div class="container">
-        <div class="inicio">Inicio</div>
-        <div class="galeria">Galeria</div>
-        <div class="videos">Videos</div>
-        <div class="contacto">Contacto</div>
+        <div class="inicioImg row-1"><img src="./assets/images/foto3.jpg" alt=""></div>
+        <div class="inicio row-1">
+            <p>Ganador del Concurso Internacional de Guitarra Clásica Ángel G. Piñero 2018 (Primer Premio) 
+                y tras haber obtenido más de 10 premios nacionales e internacionales en prestigiosos concursos 
+                como el Francisco Tárrega de Benicássim, Concurso de música de Benidorm entre otros…Jonathan Esteve Aranda 
+                se sitúa actualmente como uno de los más destacados guitarristas clásicos de su generación.</p>
+            <p>Su talento, versatilidad y dominio de los diferentes periodos del repertorio para guitarra clásica, 
+                lo convierten en un músico que toca con una personalidad muy destacada y definida, ligada siempre a 
+                una amplia técnica que ofrece grandes posibilidades sonoras. Su guitarra ha sonado en países Europeos 
+                como España, Francia, Reino Unido…Entre otras, se presenta en importantes salas como: Palacio de ferias y 
+                congresos de Málaga, Teatro Arniches, Auditorio Andrés Gaos, Teatro Concha Segura en España, St Olave Hart Street 
+                (Londres-Inglaterra) Auditorio Maurice Ravel (Francia)…</p>
+            <p>En 2015, destaca su interpretación y grabación en directo del famoso “Concierto de Aranjuez” junto con la orquesta 
+                sinfónica Castelar. Ha trabajado y compartido escenario con directores de renombre mundial como José Luis Granados, 
+                Rafael Vilaplana o Salvador Brotons.</p>
+            <p>Frecuentemente, es invitado como concertista y profesor en importantes citas internacionales: Guitar Fair de Málaga 
+                (2014), XXVIII Curso Internacional de Música de Benidorm, Festival internacional andaluz de Saint-Jean de Luz (Francia). 
+                Su iniciativa para organizar eventos relacionados con el mundo de la guitarra, le llevan a crear el Certamen de guitarra 
+                clásica “Ciudad de Castalla” del cual es promotor y director.</p>
+            <p>Jonathan Esteve nace en Castalla (Alicante-España). Formado con los maestros Francisco Albert, Victor Bravo y Antonio 
+                Clavel en los conservatorios de Villena y Oscar Esplá en Alicante, obtiene el título superior en guitarra con Matrícula 
+                de Honor. Guitarristas como Carles Trepat, Aniello Desiderio, Carlos Bonell… han reconocido y admirado su forma de tocar.</p>
+        </div>
+        <div class="galeria col-1-2 row-2">
+            <!-- El div de abajo solo indica el espacio y lugar aproximado que ocupará la galería real -->
+            <div style="width: 100%; height: 100vh; background-color: white; border: 5px solid gray;"><h1 style="text-align: center;">GALERIA</h1></div>
+        </div>
+        <div class="videos col-1-2 row-3">Videos</div>
+        <div class="noticias row-4">Noticias</div>
+        <div class="noticiasImg row-4">noticiasImg</div>
+        <div class="contactoImg row-5">contactoImg</div>
+        <div class="contacto row-5">Contacto</div>
+    </div>
+
+    <div class="footer">
+        <h1>Footer</h1>
     </div>
 
     <script src="./assets/index.js"></script>
