Añadidos videos y se ven bien en mobil, pero en ordenador demasiado grandes

--- a/index.html
+++ b/index.html
@@ -47,9 +47,40 @@
         </div>
         <div class="galeria col-1-2 row-2">
             <!-- El div de abajo solo indica el espacio y lugar aproximado que ocupará la galería real -->
-            <div style="width: 100%; height: 100vh; background-color: white; border: 5px solid gray;"><h1 style="text-align: center;">GALERIA</h1></div>
+            <div style="width: 100%; height: 100vh; background-color: white;"><h1 style="text-align: center;">GALERIA</h1></div>
         </div>
-        <div class="videos col-1-2 row-3">Videos</div>
+        <div class="videos col-1-2 row-3">
+            <div class="container-video">
+                <iframe 
+                width="560" 
+                height="315"
+                src="https://www.youtube.com/embed/AhH2NUB-u14" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+                </iframe>
+            </div>
+            <div class="container-video">
+                <iframe 
+                width="560" 
+                height="315"
+                src="https://www.youtube.com/embed/nJL08qC3fY4" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+                </iframe>
+            </div>
+            <div class="container-video">
+                <iframe 
+                width="560" 
+                height="315"
+                src="https://www.youtube.com/embed/cAq9EN8XTxQ" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+                </iframe>
+            </div>
+        </div>
         <div class="noticias row-4">Noticias</div>
         <div class="noticiasImg row-4">noticiasImg</div>
         <div class="contactoImg row-5">contactoImg</div>
