Añadidas anclas y añadida libreria galleria

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <span class="iconMenu" onclick="toogleNav()"><img src="./assets/icons/icons8-guitar.svg" alt=""></span>
         <nav id="navMenu">
             <ul>
-                <li><a class="linkMenu" href="#">Inicio</a></li>
-                <li><a class="linkMenu" href="#">Galeria</a></li>
-                <li><a class="linkMenu" href="#">Videos</a></li>
-                <li><a class="linkMenu" href="#">Noticias</a></li>
-                <li><a class="linkMenu" href="#">Contacto</a></li>
+                <li><a class="linkMenu" href="#inicio">Inicio</a></li>
+                <li><a class="linkMenu" href="#galeria">Galeria</a></li>
+                <li><a class="linkMenu" href="#videos">Videos</a></li>
+                <li><a class="linkMenu" href="#noticias">Noticias</a></li>
+                <li><a class="linkMenu" href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </div>
 
     <div class="container">
-        <div class="inicioImg row-1"><img src="./assets/images/foto3.jpg" alt=""></div>
-        <div class="inicio row-1">
+        <div class="inicioImg row-1"><img src="./assets/images/foto3.jpg" alt="Imagen Jonathan Esteve Aranda"></div>
+        <div id="inicio" class="inicio row-1">
             <p>Ganador del Concurso Internacional de Guitarra Clásica Ángel G. Piñero 2018 (Primer Premio) 
                 y tras haber obtenido más de 10 premios nacionales e internacionales en prestigiosos concursos 
                 como el Francisco Tárrega de Benicássim, Concurso de música de Benidorm entre otros…Jonathan Esteve Aranda 
@@ -45,11 +45,11 @@
                 Clavel en los conservatorios de Villena y Oscar Esplá en Alicante, obtiene el título superior en guitarra con Matrícula 
                 de Honor. Guitarristas como Carles Trepat, Aniello Desiderio, Carlos Bonell… han reconocido y admirado su forma de tocar.</p>
         </div>
-        <div class="galeria col-1-2 row-2">
+        <div id="galeria" class="galeria col-1-2 row-2">
             <!-- El div de abajo solo indica el espacio y lugar aproximado que ocupará la galería real -->
             <div style="width: 100%; height: 100vh; background-color: white;"><h1 style="text-align: center;">GALERIA</h1></div>
         </div>
-        <div class="videos col-1-2 row-3">
+        <div id="videos" class="videos col-1-2 row-3">
             <div class="container-video">
                 <iframe 
                 width="560" 
@@ -81,10 +81,10 @@
                 </iframe>
             </div>
         </div>
-        <div class="noticias row-4">Noticias</div>
+        <div id="noticias" class="noticias row-4">Noticias</div>
         <div class="noticiasImg row-4">noticiasImg</div>
         <div class="contactoImg row-5">contactoImg</div>
-        <div class="contacto row-5">Contacto</div>
+        <div id="contacto" class="contacto row-5">Contacto</div>
     </div>
 
     <div class="footer">
