Añadida galeria(tengo que comprimir las imagenes para que ocupen menos)

--- a/index.html
+++ b/index.html
@@ -46,8 +46,22 @@
                 de Honor. Guitarristas como Carles Trepat, Aniello Desiderio, Carlos Bonell… han reconocido y admirado su forma de tocar.</p>
         </div>
         <div id="galeria" class="galeria col-1-2 row-2">
-            <!-- El div de abajo solo indica el espacio y lugar aproximado que ocupará la galería real -->
-            <div style="width: 100%; height: 100vh; background-color: white;"><h1 style="text-align: center;">GALERIA</h1></div>
+            <div class="galleria">
+                <img src="./assets/images/galeria/1.jpg" alt="">
+                <img src="./assets/images/galeria/2.jpg" alt="">
+                <img src="./assets/images/galeria/3.jpg" alt="">
+                <img src="./assets/images/galeria/4.jpg" alt="">
+                <img src="./assets/images/galeria/5.jpg" alt="">
+                <img src="./assets/images/galeria/6.jpg" alt="">
+                <img src="./assets/images/galeria/7.jpg" alt="">
+                <img src="./assets/images/galeria/8.jpg" alt="">
+                <img src="./assets/images/galeria/9.jpg" alt="">
+                <img src="./assets/images/galeria/10.jpg" alt="">
+                <img src="./assets/images/galeria/11.jpg" alt="">
+                <img src="./assets/images/galeria/12.jpg" alt="">
+                <img src="./assets/images/galeria/13.jpg" alt="">
+                <img src="./assets/images/galeria/14.jpg" alt="">
+            </div>
         </div>
         <div id="videos" class="videos col-1-2 row-3">
             <div class="container-video">
@@ -91,7 +105,10 @@
         <h1>Footer</h1>
     </div>
 
-    <script src="./assets/index.js"></script>
     <!-- Librerias de terceros -->
+    <script src="./librerias/jquery-3.4.1.min.js"></script>
+    <script src="./librerias/galleria/galleria.min.js"></script>
+    <!-- Mis scripts -->
+    <script src="./assets/index.js"></script>
 </body>
 </html>
