Sección videos 'terminada'

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a class="linkMenu" href="#inicio">Inicio</a></li>
                 <li><a class="linkMenu" href="#galeria">Galeria</a></li>
-                <li><a class="linkMenu" href="#videos">Videos</a></li>
+                <li><a class="linkMenu" href="#first-video">Videos</a></li>
                 <li><a class="linkMenu" href="#noticias">Noticias</a></li>
                 <li><a class="linkMenu" href="#contacto">Contacto</a></li>
             </ul>
@@ -24,6 +24,7 @@
     <div class="container">
         <div class="inicioImg row-1"><img src="./assets/images/foto3.jpg" alt="Imagen Jonathan Esteve Aranda"></div>
         <div id="inicio" class="inicio row-1">
+            <h1 class="text-center title">Biografía</h1>
             <p>Ganador del Concurso Internacional de Guitarra Clásica Ángel G. Piñero 2018 (Primer Premio) 
                 y tras haber obtenido más de 10 premios nacionales e internacionales en prestigiosos concursos 
                 como el Francisco Tárrega de Benicássim, Concurso de música de Benidorm entre otros…Jonathan Esteve Aranda 
@@ -46,6 +47,7 @@
                 de Honor. Guitarristas como Carles Trepat, Aniello Desiderio, Carlos Bonell… han reconocido y admirado su forma de tocar.</p>
         </div>
         <div id="galeria" class="galeria col-1-2 row-2">
+            <h1 class="text-center title">Galeria</h1>
             <div class="galleria">
                 <img src="./assets/images/galeria/1.jpg" alt="">
                 <img src="./assets/images/galeria/2.jpg" alt="">
@@ -64,6 +66,8 @@
             </div>
         </div>
         <div id="videos" class="videos col-1-2 row-3">
+            <h1 class="text-center title">Vídeos</h1>
+            <h1 id="first-video" class="text-center first-title-video">Rosita Polka by Francisco Tárrega</h1>
             <div class="container-video">
                 <iframe 
                 width="560" 
@@ -74,6 +78,7 @@
                 allowfullscreen>
                 </iframe>
             </div>
+            <h1 class="text-center">Allegro BWV 1003 by J.S.Bach Sonata nº2</h1>
             <div class="container-video">
                 <iframe 
                 width="560" 
@@ -84,6 +89,7 @@
                 allowfullscreen>
                 </iframe>
             </div>
+            <h1 class="text-center">Danza Paraguaya Guaraní by Agustín Barrios Mangoré</h1>
             <div class="container-video">
                 <iframe 
                 width="560" 
