Ya está todo bastante estructurado y puestos los iconos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
+    <img src="./assets/icons/espain.png" class="icon-spain" alt="">
+    <img src="./assets/icons/reino-unido.png" class="icon-uk" alt="">
     <div class="bgHome">
         <span class="iconMenu" onclick="toogleNav()"><img src="./assets/icons/icons8-guitar.svg" alt=""></span>
         <nav id="navMenu">
@@ -101,15 +103,27 @@
                 </iframe>
             </div>
         </div>
-        <div id="noticias" class="noticias row-4">Noticias</div>
-        <div class="noticiasImg row-4">noticiasImg</div>
-        <div class="contactoImg row-5">contactoImg</div>
-        <div id="contacto" class="contacto row-5">Contacto</div>
+        <div id="noticias" class="noticias row-4">
+            <h1 class="text-center title">Noticias</h1>
+        </div>
+        <div class="noticiasImg row-4"><img src="./assets/images/foto2.jpg" alt=""></div>
+        <div class="contactoImg row-5"><img src="./assets/images/foto4.jpg" alt=""></div>
+        <div id="contacto" class="contacto row-5">
+            <h1 class="text-center title">Contacto y Redes</h1>
+            <div class="contacto-grid">
+                <img src="./assets/icons/icons8-gmail-100.png" class="icon-gmail" alt=""><a href="mailto:asfdasfperon@asdfnvodld.com">jesteve.info@gmail.com</a>
+                <img src="./assets/icons/icons8-facebook-160.png" alt=""><a href="https://www.facebook.com/jonathan.estevearanda" target="_blank">Jonathan Estheve Aranda</a>
+                <img src="./assets/icons/icons8-youtube-96.png" alt=""><a href="https://www.youtube.com/channel/UCF3VzTUjZsOYLJ_ExOnZdaw" target="_blank">Jonathan Estheve Aranda</a>
+                <img src="./assets/icons/logo-clasicaguitarra.png" class="icon-clasicaguitarra" alt=""><a href="https://clasicaguitarra.com/#/perfil/5ce5995f41dd1600179f40e1" target="_blank">Jonathan Estheve Aranda</a>
+            </div>
+        </div>
     </div>
 
     <div class="footer">
-        <h1>Footer</h1>
+        <h1 class="text-center" style="color: white; margin: 0">Footer</h1>
     </div>
+
+    <img src="./assets/icons/icons8-slide-up-100.png" class="icon-up" alt="">
 
     <!-- Librerias de terceros -->
     <script src="./librerias/jquery-3.4.1.min.js"></script>
