--- a/index.html
+++ b/index.html
@@ -7,18 +7,23 @@
     <title>Jonathan-project</title>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
-<body>
-    <img src="./assets/icons/espain.png" class="icon-spain" alt="">
-    <img src="./assets/icons/reino-unido.png" class="icon-uk" alt="">
+<body onload="onLoad()">
+    <div id="pantallaBloqueo">
+        <h1>Jonathan Esteve Aranda</h1>
+        <img src="./assets/icons/icons8-guitar.svg" alt="">
+        <h2>- Guitarrista Clásico -</h2>
+    </div>
+    <img src="./assets/icons/espain.png" class="icon-spain" onclick="changeLanguage('es')" alt="">
+    <img src="./assets/icons/reino-unido.png" class="icon-uk" onclick="changeLanguage('en')" alt="">
     <div class="bgHome">
         <span class="iconMenu" onclick="toogleNav()"><img src="./assets/icons/icons8-guitar.svg" alt=""></span>
         <nav id="navMenu">
             <ul>
-                <li><a class="linkMenu" href="#inicio">Inicio</a></li>
-                <li><a class="linkMenu" href="#galeria">Galeria</a></li>
-                <li><a class="linkMenu" href="#first-video">Videos</a></li>
-                <li><a class="linkMenu" href="#noticias">Noticias</a></li>
-                <li><a class="linkMenu" href="#contacto">Contacto</a></li>
+                <li><a id="linkInicio"class="linkMenu" href="#inicio">Inicio</a></li>
+                <li><a id="linkGaleria" class="linkMenu" href="#galeria">Galeria</a></li>
+                <li><a id="linkVideos" class="linkMenu" href="#first-video">Videos</a></li>
+                <li><a id="linkNoticias" class="linkMenu" href="#noticias">Noticias</a></li>
+                <li><a id="linkContacto" class="linkMenu" href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </div>
@@ -26,30 +31,30 @@
     <div class="container">
         <div class="inicioImg row-1"><img src="./assets/images/foto3.jpg" alt="Imagen Jonathan Esteve Aranda"></div>
         <div id="inicio" class="inicio row-1">
-            <h1 class="text-center title">Biografía</h1>
-            <p>Ganador del Concurso Internacional de Guitarra Clásica Ángel G. Piñero 2018 (Primer Premio) 
+            <h1 id="titleBiografia" class="text-center title">Biografía</h1>
+            <p id="biop1">Ganador del Concurso Internacional de Guitarra Clásica Ángel G. Piñero 2018 (Primer Premio) 
                 y tras haber obtenido más de 10 premios nacionales e internacionales en prestigiosos concursos 
                 como el Francisco Tárrega de Benicássim, Concurso de música de Benidorm entre otros…Jonathan Esteve Aranda 
                 se sitúa actualmente como uno de los más destacados guitarristas clásicos de su generación.</p>
-            <p>Su talento, versatilidad y dominio de los diferentes periodos del repertorio para guitarra clásica, 
+            <p id="biop2">Su talento, versatilidad y dominio de los diferentes periodos del repertorio para guitarra clásica, 
                 lo convierten en un músico que toca con una personalidad muy destacada y definida, ligada siempre a 
                 una amplia técnica que ofrece grandes posibilidades sonoras. Su guitarra ha sonado en países Europeos 
                 como España, Francia, Reino Unido…Entre otras, se presenta en importantes salas como: Palacio de ferias y 
                 congresos de Málaga, Teatro Arniches, Auditorio Andrés Gaos, Teatro Concha Segura en España, St Olave Hart Street 
                 (Londres-Inglaterra) Auditorio Maurice Ravel (Francia)…</p>
-            <p>En 2015, destaca su interpretación y grabación en directo del famoso “Concierto de Aranjuez” junto con la orquesta 
+            <p id="biop3">En 2015, destaca su interpretación y grabación en directo del famoso “Concierto de Aranjuez” junto con la orquesta 
                 sinfónica Castelar. Ha trabajado y compartido escenario con directores de renombre mundial como José Luis Granados, 
                 Rafael Vilaplana o Salvador Brotons.</p>
-            <p>Frecuentemente, es invitado como concertista y profesor en importantes citas internacionales: Guitar Fair de Málaga 
+            <p id="biop4">Frecuentemente, es invitado como concertista y profesor en importantes citas internacionales: Guitar Fair de Málaga 
                 (2014), XXVIII Curso Internacional de Música de Benidorm, Festival internacional andaluz de Saint-Jean de Luz (Francia). 
                 Su iniciativa para organizar eventos relacionados con el mundo de la guitarra, le llevan a crear el Certamen de guitarra 
                 clásica “Ciudad de Castalla” del cual es promotor y director.</p>
-            <p>Jonathan Esteve nace en Castalla (Alicante-España). Formado con los maestros Francisco Albert, Victor Bravo y Antonio 
+            <p id="biop5">Jonathan Esteve nace en Castalla (Alicante-España). Formado con los maestros Francisco Albert, Victor Bravo y Antonio 
                 Clavel en los conservatorios de Villena y Oscar Esplá en Alicante, obtiene el título superior en guitarra con Matrícula 
                 de Honor. Guitarristas como Carles Trepat, Aniello Desiderio, Carlos Bonell… han reconocido y admirado su forma de tocar.</p>
         </div>
         <div id="galeria" class="galeria col-1-2 row-2">
-            <h1 class="text-center title">Galeria</h1>
+            <h1 id="titleGaleria" class="text-center title">Galeria</h1>
             <div class="galleria">
                 <img src="./assets/images/galeria/1.jpg" alt="">
                 <img src="./assets/images/galeria/2.jpg" alt="">
@@ -68,7 +73,7 @@
             </div>
         </div>
         <div id="videos" class="videos col-1-2 row-3">
-            <h1 class="text-center title">Vídeos</h1>
+            <h1 id="titleVideos" class="text-center title">Vídeos</h1>
             <h1 id="first-video" class="text-center first-title-video">Rosita Polka by Francisco Tárrega</h1>
             <div class="container-video">
                 <iframe 
@@ -104,12 +109,12 @@
             </div>
         </div>
         <div id="noticias" class="noticias row-4">
-            <h1 class="text-center title">Noticias</h1>
+            <h1 id="titleNoticias" class="text-center title">Noticias</h1>
         </div>
         <div class="noticiasImg row-4"><img src="./assets/images/foto2.jpg" alt=""></div>
         <div class="contactoImg row-5"><img src="./assets/images/foto4.jpg" alt=""></div>
         <div id="contacto" class="contacto row-5">
-            <h1 class="text-center title">Contacto y Redes</h1>
+            <h1 id="titleContacto" class="text-center title">Contacto y Redes</h1>
             <div class="contacto-grid">
                 <img src="./assets/icons/icons8-gmail-100.png" class="icon-gmail" alt=""><a href="mailto:asfdasfperon@asdfnvodld.com">jesteve.info@gmail.com</a>
                 <img src="./assets/icons/icons8-facebook-160.png" alt=""><a href="https://www.facebook.com/jonathan.estevearanda" target="_blank">Jonathan Estheve Aranda</a>
@@ -123,7 +128,7 @@
         <h1 class="text-center" style="color: white; margin: 0">Footer</h1>
     </div>
 
-    <img src="./assets/icons/icons8-slide-up-100.png" class="icon-up" alt="">
+    <img src="./assets/icons/icons8-slide-up-100.png" id="iconBackToTop" onclick="backToTop()" class="icon-up" alt="">
 
     <!-- Librerias de terceros -->
     <script src="./librerias/jquery-3.4.1.min.js"></script>
