Mejorado aspecto y comportamiento del menú

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <span class="iconMenu" onclick="toogleNav()"><img src="./assets/icons/icons8-guitar.svg" alt=""></span>
         <nav id="navMenu">
             <ul>
-                <li><a id="linkInicio"class="linkMenu" href="#inicio">Inicio</a></li>
-                <li><a id="linkGaleria" class="linkMenu" href="#galeria">Galeria</a></li>
-                <li><a id="linkVideos" class="linkMenu" href="#first-video">Videos</a></li>
-                <li><a id="linkNoticias" class="linkMenu" href="#noticias">Noticias</a></li>
-                <li><a id="linkContacto" class="linkMenu" href="#contacto">Contacto</a></li>
+                <li><a onclick="onClickLink()" id="linkInicio"class="linkMenu" href="#inicio">Inicio</a></li>
+                <li><a onclick="onClickLink()" id="linkGaleria" class="linkMenu" href="#galeria">Galeria</a></li>
+                <li><a onclick="onClickLink()" id="linkVideos" class="linkMenu" href="#first-video">Videos</a></li>
+                <li><a onclick="onClickLink()" id="linkNoticias" class="linkMenu" href="#noticias">Noticias</a></li>
+                <li><a onclick="onClickLink()" id="linkContacto" class="linkMenu" href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </div>
