Inplementado botón en la pantalla de bloqueo para entrar y poner a play la musica

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 <body onload="onLoad()">
     <div id="pantallaBloqueo">
-        <h1>Jonathan Esteve Aranda</h1>
-        <img src="./assets/icons/icons8-guitar.svg" alt="">
-        <h2>- Guitarrista Clásico - <br> - Classical Guitarist -</h2>
+        <h1 id="btnPantallaBloqueo" onclick="clickBtnaToToGetIn()">ENTRAR</button>
+        <h1 id="h1PantallaBloqueo">Jonathan Esteve Aranda</h1>
+        <img id="imgPantallaBloqueo" src="./assets/icons/icons8-guitar.svg" alt="">
+        <h2 id="h2PantallaBloqueo">- Guitarrista Clásico - <br> - Classical Guitarist -</h2>
     </div>
 
     <img src="./assets/icons/espain.png" class="icon-spain" onclick="changeLanguage('es')" alt="">
