Nuevos cambios vistos con Joni

--- a/index.html
+++ b/index.html
@@ -69,20 +69,17 @@
         <div id="galeria" class="galeria col-1-2 row-2">
             <h1 id="titleGaleria" class="text-center title klanimate" data-y="100">Galeria</h1>
             <div class="galleria">
-                <img src="./assets/images/galeria/1-min.jpg" alt="">
-                <img src="./assets/images/galeria/2-min.jpg" alt="">
                 <img src="./assets/images/galeria/3-min.jpg" alt="">
                 <img src="./assets/images/galeria/4-min.jpg" alt="">
                 <img src="./assets/images/galeria/5-min.jpg" alt="">
-                <img src="./assets/images/galeria/6-min.jpg" alt="">
-                <img src="./assets/images/galeria/7-min.jpg" alt="">
-                <img src="./assets/images/galeria/8-min.jpg" alt="">
-                <img src="./assets/images/galeria/9-min.jpg" alt="">
-                <img src="./assets/images/galeria/10-min.jpg" alt="">
                 <img src="./assets/images/galeria/11-min.jpg" alt="">
                 <img src="./assets/images/galeria/12-min.jpg" alt="">
                 <img src="./assets/images/galeria/13-min.jpg" alt="">
-                <img src="./assets/images/galeria/14-min.jpg" alt="">
+                <img src="./assets/images/galeria/15.jpg" alt="">
+                <img src="./assets/images/galeria/16.jpg" alt="">
+                <img src="./assets/images/galeria/17.jpg" alt="">
+                <img src="./assets/images/galeria/18.jpg" alt="">
+                <img src="./assets/images/galeria/19.jpg" alt="">
             </div>
         </div>
         <div id="videos" class="videos col-1-2 row-3">
@@ -123,8 +120,8 @@
         </div>
         <div id="agenda" class="agenda row-4">
             <h1 id="titleAgenda" class="text-center title klanimate" data-y="-100">Agenda</h1>
-            <p id="p1agenda" class="text-center">No te pierdas ni un solo consierto de Jonathan Esteve.</p>
-            <p id="p2agenda" class="text-center">Siguelo y entérate de todos sus conciertos y acontecimientos.</p>
+            <!-- <p id="p1agenda" class="text-center">No te pierdas ni un solo concierto de Jonathan Esteve.</p> -->
+            <!-- <p id="p2agenda" class="text-center">Siguelo y entérate de todos sus conciertos y acontecimientos.</p> -->
             <img id="imgDisco" src="./assets/icons/icons8-cd-100.png" alt="">
             <p id="p3agenda" class="text-center">En su página de Facebook podrás encontrar información a cerca de sus nuevos conciertos y otros datos de interés.</p>
             <img id="imgFace" src="./assets/icons/icons8-facebook-nuevo-100.png" class="klanimate" data-x="100" alt="">
