--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Jonathan-project</title>
     <link rel="icon" type="image/png" href="./assets/icons/icons8-guitarra-128.png" />
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 </head>
 <body onload="onLoad()">
     <div id="pantallaBloqueo">
@@ -23,12 +24,12 @@
         <span class="iconMenu" onclick="toogleNav()"><img src="./assets/icons/icons8-guitar.svg" alt=""></span>
         <nav id="navMenu">
             <ul id="ulNavMenu">
-                <li><a onclick="onClickLink()" id="linkInicio"class="linkMenu" href="#inicio">Inicio</a></li>
-                <li><a onclick="onClickLink()" id="linkBiografia"class="linkMenu" href="#biografia">Biografía</a></li>
-                <li><a onclick="onClickLink()" id="linkGaleria" class="linkMenu" href="#galeria">Galeria</a></li>
-                <li><a onclick="onClickLink()" id="linkVideos" class="linkMenu" href="#first-video">Videos</a></li>
-                <li><a onclick="onClickLink()" id="linkAgenda" class="linkMenu" href="#agenda">Agenda</a></li>
-                <li><a onclick="onClickLink()" id="linkContacto" class="linkMenu" href="#contacto">Contacto</a></li>
+                <li id="liInicio"><a onclick="onClickLink()" id="linkInicio"class="linkMenu" href="#inicio">Inicio</a></li>
+                <li id="liBiografia"><a onclick="onClickLink()" id="linkBiografia"class="linkMenu" href="#biografia">Biografía</a></li>
+                <li id="liGaleria"><a onclick="onClickLink()" id="linkGaleria" class="linkMenu" href="#galeria">Galeria</a></li>
+                <li id="liVideos"><a onclick="onClickLink()" id="linkVideos" class="linkMenu" href="#first-video">Videos</a></li>
+                <li id="liAgenda"><a onclick="onClickLink()" id="linkAgenda" class="linkMenu" href="#agenda">Agenda</a></li>
+                <li id="liContacto"><a onclick="onClickLink()" id="linkContacto" class="linkMenu" href="#contacto">Contacto</a></li>
             </ul>
         </nav>
         <div class="titleBgHome">
@@ -85,7 +86,7 @@
         <div id="videos" class="videos col-1-2 row-3">
             <h1 id="titleVideos" class="text-center title klanimate" data-y="-100">Vídeos</h1>
             <h1 id="first-video" class="text-center first-title-video klanimate" data-x="100">Rosita Polka by Francisco Tárrega</h1>
-            <div class="container-video klanimate" data-x="-100">
+            <!-- <div class="container-video klanimate" data-x="-100">
                 <iframe 
                 width="560" 
                 height="315"
@@ -116,7 +117,7 @@
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
                 </iframe>
-            </div>
+            </div> -->
         </div>
         <div id="agenda" class="agenda row-4">
             <h1 id="titleAgenda" class="text-center title klanimate" data-y="-100">Agenda</h1>
