Probando animacion con animate.css en lugar de con klanimate que va a trompicones, viendo que funciona bien, refactorizaré el código y quitaré klanimate

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body onload="onLoad()">
     <div id="pantallaBloqueo">
-        <h1 id="btnPantallaBloqueo" onclick="clickBtnaToToGetIn()">ENTRAR</button>
+        <h1 id="btnPantallaBloqueo" onclick="clickBtnToGetin()">ENTRAR</button>
         <h1 id="h1PantallaBloqueo">Jonathan Esteve Aranda</h1>
         <img id="imgPantallaBloqueo" src="./assets/icons/icons8-guitar.svg" alt="">
         <h2 id="h2PantallaBloqueo">- Guitarrista Clásico - <br> - Classical Guitarist -</h2>
@@ -68,7 +68,7 @@
                 de Honor. Guitarristas como Carles Trepat, Aniello Desiderio, Carlos Bonell… han reconocido y admirado su forma de tocar.</p>
         </div>
         <div id="galeria" class="galeria col-1-2 row-2">
-            <h1 id="titleGaleria" class="text-center title klanimate" data-y="100">Galeria</h1>
+            <h1 id="titleGaleria" class="text-center title" data-y="100">Galeria</h1>
             <div class="galleria">
                 <img src="./assets/images/galeria/3-min.jpg" alt="">
                 <img src="./assets/images/galeria/4-min.jpg" alt="">
