--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <span class="iconMenu" onclick="toogleNav()"><img src="./assets/icons/icons8-guitar.svg" alt=""></span>
         <nav id="navMenu">
             <ul id="ulNavMenu">
-                <li id="liInicio"><a onclick="onClickLink()" id="linkInicio"class="linkMenu" href="#inicio">Inicio</a></li>
-                <li id="liBiografia"><a onclick="onClickLink()" id="linkBiografia"class="linkMenu" href="#biografia">Biografía</a></li>
-                <li id="liGaleria"><a onclick="onClickLink()" id="linkGaleria" class="linkMenu" href="#galeria">Galeria</a></li>
-                <li id="liVideos"><a onclick="onClickLink()" id="linkVideos" class="linkMenu" href="#first-video">Videos</a></li>
-                <li id="liAgenda"><a onclick="onClickLink()" id="linkAgenda" class="linkMenu" href="#agenda">Agenda</a></li>
-                <li id="liContacto"><a onclick="onClickLink()" id="linkContacto" class="linkMenu" href="#contacto">Contacto</a></li>
+                <li class="liNav"><a onclick="onClickLink()" id="linkInicio"class="linkMenu" href="#inicio">Inicio</a></li>
+                <li class="liNav"><a onclick="onClickLink()" id="linkBiografia"class="linkMenu" href="#biografia">Biografía</a></li>
+                <li class="liNav"><a onclick="onClickLink()" id="linkGaleria" class="linkMenu" href="#galeria">Galeria</a></li>
+                <li class="liNav"><a onclick="onClickLink()" id="linkVideos" class="linkMenu" href="#first-video">Videos</a></li>
+                <li class="liNav"><a onclick="onClickLink()" id="linkAgenda" class="linkMenu" href="#agenda">Agenda</a></li>
+                <li class="liNav"><a onclick="onClickLink()" id="linkContacto" class="linkMenu" href="#contacto">Contacto</a></li>
             </ul>
         </nav>
         <div class="titleBgHome">
